tests/sema/err_undefined.diag
err_undefined.ax:2:13: error: undefined: 'y'
