tests/sema/err_undefined.ax
fn main():
    let x = y
